--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.37",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
